--- a/src/assets/html/ejs/common/_header.ejs
+++ b/src/assets/html/ejs/common/_header.ejs
@@ -1,3 +1,5 @@
+<% let title = (pageId === 'home') ? jsonData.siteInfo.name : jsonData.pages[pageId].name + jsonData.siteInfo.name%>
+<% let description = jsonData.pages[pageId].description %>
 
 <!DOCTYPE html>
 <html lang="ja">
@@ -28,11 +30,21 @@
   <!-- ヘッダー -->
   <header>
     <% if (pageId === 'home'){ %>
-      <h1>サイトタイトル</h1>
+      <h1><%= jsonData.siteInfo.name %></h1>
     <% } else { %>
-      <p><a href="/">サイトタイトル</a></p>
+      <a href="/"><%= jsonData.siteInfo.name %></a>
     <% } %>
   </header>
-
+  <nav>
+    <ul>
+      <% for(let page in jsonData.pages){ %>
+        <% if (page === pageId) { %>
+          <li class="current"><%= jsonData.pages[page].name %></li>
+        <% } else { %>
+          <li><a href="/<%= page %>/"><%= jsonData.pages[page].name %></a></li>
+        <% } %>
+      <% }; %>
+    </ul>
+  </nav>
 <!-- メイン -->
 <main>
