細かい点を調整

--- a/src/assets/html/ejs/_common/_footer.ejs
+++ b/src/assets/html/ejs/_common/_footer.ejs
@@ -1,12 +1,4 @@
-  </main>
   <!-- フッター -->
-  <footer>
-    <nav>
-      <ul>
-        <% for(const page in json.pages){ %>
-          <li><a href="/<%= page %>/"><%= json.pages[page].name %></a></li>
-        <% }; %>
-      </ul>
-    </nav>
-    <p><small>（c）<%= json.siteInfo.name %></small></p>
+  <footer class="l-footer">
+
   </footer>
