--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -1,4 +1,29 @@
-@use "global";
-@use "foundation";
-@use "object";
-@use "layout";
+//* =====================================================================
+//* Foundation
+//* =====================================================================
+@use 'foundation/reset';
+@use 'foundation/font';
+@use 'foundation/base';
+
+//* =====================================================================
+//* Layout
+//* =====================================================================
+@use "layout/**";
+
+//* =====================================================================
+//* Object
+//* =====================================================================
+//* -------------------------------------------------------
+//* Component
+//* -------------------------------------------------------
+@use "object/component/**";
+
+//* -------------------------------------------------------
+//* Project
+//* -------------------------------------------------------
+@use "object/project/**";
+
+//* -------------------------------------------------------
+//* Utility
+//* -------------------------------------------------------
+@use "object/utility/**";
