--- a/src/assets/html/ejs/_common/_script.ejs
+++ b/src/assets/html/ejs/_common/_script.ejs
@@ -1,4 +1,5 @@
   <!-- Javascript -->
-  <script src="<%= baseUrl %>assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
   </body>
-</html>
+
+  </html>
